--- a/style.css
+++ b/style.css
@@ -187,9 +187,15 @@ input[type="radio"]:checked:after {
     align-self: center;
 }
 
-#boton {
+.botones {
     width: 200px;
     margin-top: 10px;
+    margin: 4px;
+}
+
+.matchesp {
+    text-align: center;
+    margin-top: 20px;
 }
 
 
